@startuml
class ListMaker {
    +main()
    +start()
}

class ItemController {
    -openFile()
    -saveFile()
    -saveAsFile()
    --
    +run()
    +addButtonClicked()
    +enterButtonAdd()
    +renameButtonClicked()
    +editDateButtonClicked()
    +editDescriptionButtonClicked()
    +deleteButtonClicked()
    +openMenuClicked()
    +saveMenuClicked()
    +saveAsMenuClicked()
    +closeMenuClicked()
    +howToUseMenuClicked()
    +aboutMenuClicked()
    +deleteAllButtonClicked()
    +showAllFilterClicked()
    +incompleteFilterClicked()
    +completedFilterClicked()
    +tableColumnClicked()
    +doubleClick()
    +saveEdit()
    +cancelEdit()
}

class Table {
    -task
    -date
    -description
    --
    +Table()
    +getTask()
    +setTask()
    +taskProperty()
    +getDate()
    +setDate()
    +dateProperty()
    +getDescription()
    +setDescription()
    +descriptionProperty()
}

class Initialize {
    +run()
}

javafx.Application <|-- ListMaker
ListMaker <|-- ItemController
ItemController - Table
ItemController <|-- Initialize


@enduml